// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gif Expert APP debe hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Gif Expert APP debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="Demon Slayer"
      key="Demon Slayer"
    />
  </ol>
</Fragment>
`;
